test_scores/negative_dimers/features/O43463.pkl.xz
/g/alphafold/input_features/Homo_sapiens/features/O43463.pkl.xz